# normix

./: .buildinfo  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  architecture.html  changelog.html  demos.html  design.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  release-please-config.json  search.html  searchindex.js
.cursor/rules/: best-practices.mdc  coding-conventions.mdc  coding-style.mdc  commit-workflow.mdc  distribution-patterns.mdc  docs-cross-links.mdc  maintain-agents-md.mdc  maintain-architecture-md.mdc  maintain-cursor-rules.mdc  maintain-design-docs.mdc  maintain-skills.mdc  maintain-theory-docs.mdc  notebook-guidelines.mdc  project-overview.mdc  python-environment.mdc  rule-authoring.mdc  testing-guidelines.mdc
.doctrees/: architecture.doctree  changelog.doctree  design.doctree  index.doctree  quickstart.doctree
.doctrees/__intersphinx_cache__/: equinox_objects.inv  jax_objects.inv  python_objects.inv
.doctrees/api/: distributions.doctree  finance.doctree  fitting.doctree  index.doctree  mixtures.doctree  utils.doctree
.doctrees/design/: em_framework.doctree  exponential_family.doctree  index.doctree  mixtures.doctree  (+1 more)
_modules/: index.html
_sources/: architecture.rst.txt  design.rst  index.rst.txt  quickstart.rst
_static/: documentation_options.js  normix.css
api/: distributions.html  finance.html  fitting.html  index.html  mixtures.html  utils.html
benchmarks/: bench_bessel.py  bench_em_mixture.py  bench_gh_paths.py  bench_gig_solvers.py  bench_incremental_em.py  bench_jit_solvers.py  compare.py  run_all.py  utils.py
data/: gig_test.csv
design/: em_framework.html  exponential_family.html  index.html  mixtures.html  solvers_and_bessel.html
dev-notes/: ARCHITECTURE.md  README.md
distributions/: factor_variants.html  gamma.html  generalized_hyperbolic.html  gig.html  index.html  inverse_gamma.html  inverse_gaussian.html  multivariate_normal.html  normal_inverse_gamma.html  normal_inverse_gaussian.html  variance_gamma.html
docs/: .gitignore  ARCHITECTURE.md  Makefile  architecture.rst  conf.py  demos.rst  efax_architecture_analysis.md  index.md  index.rst  jax_bessel_research.md  jax_design.md  jax_distribution_ecosystem_survey.md  jax_em_research.md  jax_fitting_design_analysis.md  jax_migration_plan.md  jax_migration_report.md  jax_normix_design_exploration.md  jax_normix_fit_design.md  jax_normix_incremental_fit.md  redesign_parameter_storage.md  refactoring_plan.md  research_jax_em_design.md
getting_started/: first_model.html  install.html  quickstart.html
normix/: __init__.py  _bessel.py  _types.py  divergences.py  exponential_family.py  params.py
normix_numpy/: __init__.py  params.py
notebooks/: README.md  bessel_function_comparison.html  bessel_function_comparison.ipynb  distribution_conversions.ipynb  em_shrinkage_demo.py  em_vs_mcecm.ipynb  exponential_distribution.html  exponential_distribution.ipynb  finance_phase_d_cvar_demo.ipynb  gamma_distribution.html  gamma_distribution.ipynb  generalized_hyperbolic_distribution.html  generalized_hyperbolic_distribution.ipynb  generalized_inverse_gaussian_distribution.html  generalized_inverse_gaussian_distribution.ipynb  hellinger_distance.ipynb  ig-dev.ipynb  inverse_gamma_distribution.html  inverse_gamma_distribution.ipynb  inverse_gaussian_distribution.html  inverse_gaussian_distribution.ipynb  log-bessel-function-test.ipynb  mixture_distributions_comparison.html  mixture_distributions_comparison.ipynb  multivariate_normal_distribution.html  multivariate_normal_distribution.ipynb  normal_inverse_gamma_distribution.html  normal_inverse_gamma_distribution.ipynb  normal_inverse_gaussian_distribution.html  normal_inverse_gaussian_distribution.ipynb  sp500_empirical_study.ipynb  sp500_factor_mixtures_study.ipynb  sp500_index_empirical_study.html  sp500_index_empirical_study.ipynb  sp500_stocks_multivariate_study.html  sp500_stocks_multivariate_study.ipynb  varentropy_validation.ipynb  varentropy_validation.py  variance_gamma_distribution.html  variance_gamma_distribution.ipynb
pygh/: func.py  gh.py  gig.py
scripts/: benchmark_comprehensive.py  benchmark_gig_rvs.py  benchmark_gig_solvers.py  benchmark_hybrid_vs_numpy.py  benchmark_log_partition.py  benchmark_mixture_em.py  check_doc_links.sh  check_mstep_denominator.py  compare_bessel_implementations.py  compare_em_convergence.py  compare_gh_implementations.py  debug_gh_high_dim.py  debug_gh_parameter_instability.py  debug_vg_high_dim.py  debug_vg_norm_detailed_trace.py  debug_vg_normalization.py  download_dj30.py  download_sp500_data.py  investigate_gig_fit.py  monitor_resources.py  profile_cpu_vs_gpu.py  profile_gh_em_breakdown.py  profile_numpy_quick.py  profile_numpy_vs_jax.py  rerun_em_profiling.py  research_gig_roundtrip.py  rst_theory_to_myst.py  test_gh_high_dim.py
tests/: __init__.py  test_cached_property_invalidation.py  test_cdf_ppf.py  test_cpu_bessel_backend.py  test_distribution_conversions.py  test_distributions_vs_scipy.py  test_divergences.py  test_em_cpu_vs_jax.py  test_em_regression.py  test_exponential_family.py  test_extreme_parameters.py  test_factor_mixture.py  test_generalized_hyperbolic.py  test_gig_properties.py  test_gig_special_cases.py  test_high_dimensional.py  test_incremental_em.py  test_jax_bessel.py  test_jax_distributions.py  test_marginal_api.py  test_mcecm.py  test_multivariate_rvs.py  test_normal_inverse_gamma.py  test_normal_inverse_gaussian.py  test_package_imports.py  test_params.py  test_posterior_gig.py  test_regularizations.py  test_solvers.py  test_sp500_distribution_validation.py  test_varentropy.py  test_variance_gamma.py
theory/: cvar_derivatives.html  em_algorithm.html  enb.html  factor_analysis.html  generalized_enb.html  gh.html  gig.html  index.html  mean_risk_optimization.html  online_em.html  shrinkage.html  transaction_costs.html  varentropy.html
tutorials/: index.html
user_guide/: distributions.html  divergences.html  em_fitting.html  exponential_family.html  finance.html
(+433 files in other folders)
