[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygh"
version = "0.1.0"
description = "Python package for Generalized Hyperbolic distributions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "pygh developers"},
]
keywords = [
    "statistics",
    "probability",
    "generalized-hyperbolic",
    "normal-inverse-gaussian",
    "variance-gamma",
    "normal-inverse-gamma",
    "fat-tail",
    "exponential-family",
    "distributions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.14.0",  # Required for scipy.differentiate (available since 1.14.0)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "numpydoc>=1.2",
]

[project.urls]
Homepage = "https://github.com/xshi19/pygh"
Repository = "https://github.com/xshi19/pygh"
Documentation = "https://github.com/xshi19/pygh"
"Bug Tracker" = "https://github.com/xshi19/pygh/issues"

[tool.setuptools]
packages = ["pygh"]

[tool.setuptools.package-data]
pygh = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | legacy
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygh.legacy.*"
ignore_errors = true

[tool.coverage.run]
source = ["pygh"]
omit = [
    "*/tests/*",
    "*/legacy/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

