[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "normix"
version = "0.1.0"
description = "Python package for Generalized Hyperbolic distributions"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "normix developers"},
]
keywords = [
    "statistics",
    "probability",
    "generalized-hyperbolic",
    "normal-inverse-gaussian",
    "variance-gamma",
    "normal-inverse-gamma",
    "fat-tail",
    "exponential-family",
    "distributions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "lxml>=6.0.2",
    "numpy>=2.0.0",
    "scipy>=1.14.0",  # Required for scipy.differentiate (available since 1.14.0)
    "yfinance>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.9",
    "ipykernel>=6.29",
]
docs = [
    "sphinx>=9.0",
    "sphinx-rtd-theme>=3.0",
    "nbsphinx>=0.9",
    "pandoc>=2.4",
]

[project.urls]
Homepage = "https://github.com/xshi19/normix"
Repository = "https://github.com/xshi19/normix"
Documentation = "https://github.com/xshi19/normix"
"Bug Tracker" = "https://github.com/xshi19/normix/issues"

[tool.hatch.build.targets.wheel]
packages = ["normix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "normix.legacy.*"
ignore_errors = true

[tool.coverage.run]
source = ["normix"]
omit = [
    "*/tests/*",
    "*/legacy/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.0",
]

