[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "normix"
version = "0.2.0"
description = "JAX package for Generalized Hyperbolic distributions as exponential families"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "normix developers"},
]
keywords = [
    "statistics",
    "probability",
    "generalized-hyperbolic",
    "normal-inverse-gaussian",
    "variance-gamma",
    "normal-inverse-gamma",
    "fat-tail",
    "exponential-family",
    "distributions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "jax>=0.4.38",
    "equinox>=0.13",
    "jaxopt>=0.8",
]

[project.optional-dependencies]
cuda12 = [
    "jax[cuda12]>=0.4.38",
]
plotting = [
    "matplotlib>=3.10.0",
]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.9",
    "ipykernel>=6.29",
]
scripts = [
    "lxml>=6.0.2",
    "yfinance>=1.1.0",
]
docs = [
    "sphinx>=9.0",
    "sphinx-rtd-theme>=3.0",
    "nbsphinx>=0.9",
    "pandoc>=2.4",
]

[project.urls]
Homepage = "https://github.com/xshi19/normix"
Repository = "https://github.com/xshi19/normix"
Documentation = "https://xshi19.github.io/normix/"
"Bug Tracker" = "https://github.com/xshi19/normix/issues"

[tool.hatch.build.targets.wheel]
packages = ["normix"]

[tool.hatch.build.targets.sdist]
include = [
    "/normix",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-m",
    "not slow and not stress and not integration and not gpu",
]
markers = [
    "smoke: small API-level tests that should always be fast",
    "contract: essential mathematical/API invariants",
    "slow: tests with noticeably high runtime",
    "stress: high-iteration, large-sample, or broad numerical stress tests",
    "integration: larger workflow or real-data validation tests",
    "gpu: tests that require or specifically exercise GPU behavior",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["normix"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "marimo>=0.23.2",
    "nbconvert>=7.17.0",
    "nbsphinx>=0.9.8",
    "pandas>=2.0.0",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
]
